# mpkv

./: .gitignore  Dockerfile  README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_cli.py  test_core.py  test_fields.py  test_models.py
vault/: core.py  errors.py  fields.py  models.py
